Add runtime script for token window and path fixes

--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@ body, p, li, a, button, input, textarea, small, label{
 <link href="https://fonts.googleapis.com/css2?family=Syne:wght@600..800&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Sora:wght@500;600;700&family=Plus+Jakarta+Sans:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
+  <!-- Codex: add runtime script for iPhone token window + path fixes -->
+  <script src="./main.js" defer></script>
 <body>
   <div class="hero">
     <header class="nav"><a href="./" class="brand brand-link"><img src="images/quali-wordmark.svg" alt="quali.chat" class="brand-wordmark"/></a>
