Add auto access modal script

--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@ body, p, li, a, button, input, textarea, small, label{
     wrap.appendChild(s);
   }
 })();
-</script>
-</body>
-</html>
+  </script>
+  <script defer src="autoaccess.js"></script>
+  </body>
+  </html>
