refactor: clean badge and add phone depth

--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@ body, p, li, a, button, input, textarea, small, label{
   }
 })();
   </script>
+  <!-- inject helper for removing old badge and adding right-side depth -->
   <script defer src="autoaccess.js"></script>
   </body>
   </html>
