Remove white badge overlay and add iPhone 3D thickness (no binaries)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>quali.chat — token-gated chat</title>
   <meta name="color-scheme" content="dark light">
+  <link rel="stylesheet" href="/assets/override.css">
   <style>
   :root{--bg:#05070C;--text:#fff;--muted:rgba(255,255,255,.75);--line:rgba(255,255,255,.12);--panel:rgba(255,255,255,.04);--panel2:rgba(255,255,255,.02);--shadow:0 40px 120px rgba(0,0,0,.6)}
   *{box-sizing:border-box}html,body{margin:0;height:100%;font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Inter,Helvetica,Arial;background:#000;color:var(--text)}
@@ -368,5 +369,6 @@ body, p, li, a, button, input, textarea, small, label{
 })();
   </script>
   <script defer src="autoaccess.js"></script>
+  <script src="/assets/iphone-patch.js"></script>
   </body>
-  </html>
+</html>
