--- a/public/automatic-access-demo.html
+++ b/public/automatic-access-demo.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Automatic Access – Phone Preview</title>
+  <link rel="stylesheet" href="/assets/override.css">
   <style>
     :root {
       --bg:#0b0f1a;
@@ -84,5 +85,6 @@
     </div>
     <div class="footer">© Your App</div>
   </div>
-</body>
-</html>
+  <script src="/assets/iphone-patch.js"></script>
+  </body>
+  </html>
