Inject global patch: remove white card, add iPhone thickness (no binaries)

--- a/index.html
+++ b/index.html
@@ -370,5 +370,6 @@ body, p, li, a, button, input, textarea, small, label{
   </script>
   <script defer src="autoaccess.js"></script>
   <script src="/assets/iphone-patch.js"></script>
+  <script src="/quali-site-live/global-patch.js"></script>
   </body>
 </html>
