--- a/public/automatic-access-demo.html
+++ b/public/automatic-access-demo.html
@@ -86,5 +86,6 @@
     <div class="footer">© Your App</div>
   </div>
   <script src="/assets/iphone-patch.js"></script>
+  <script src="/quali-site-live/global-patch.js"></script>
   </body>
   </html>
