--- a/index.html
+++ b/index.html
@@ -90,14 +90,16 @@
     </section>
   </main>
 
-  <footer class="site-footer">
-    <nav>
-      <a href="./about.html">About</a>
-      <a href="./demo.html">Demo</a>
-      <a href="./terms.html">Terms</a>
-      <a href="./privacy.html">Privacy</a>
+  <footer class="site-footer" style="margin-top:6rem;padding:2.5rem 1rem;border-top:1px solid rgba(255,255,255,.12);display:flex;flex-wrap:wrap;gap:1rem;align-items:center;justify-content:center;font-size:0.95rem;">
+    <nav class="footer-links" style="display:flex;flex-wrap:wrap;gap:1.25rem;text-transform:uppercase;letter-spacing:.02em;">
+      <a href="/" style="opacity:.9;text-decoration:none">Home</a>
+      <a href="/support.html" style="opacity:.9;text-decoration:none">Support</a>
+      <a href="/terms-of-use.html" style="opacity:.9;text-decoration:none">Terms of Use</a>
+      <a href="/privacy-policy.html" style="opacity:.9;text-decoration:none">Privacy Policy</a>
+      <a href="/acceptable-use-policy.html" style="opacity:.9;text-decoration:none">Acceptable Use Policy</a>
+      <a href="/copyright.html" style="opacity:.9;text-decoration:none">Copyright</a>
     </nav>
-    <small>© <span id="year"></span> quali.chat</small>
+    <div style="flex-basis:100%;text-align:center;opacity:.7;margin-top:.75rem;">© 2024 quali.chat. All rights reserved.</div>
   </footer>
 
   <script src="./app.js" defer></script>
