--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>quali.chat — Home</title>
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="./styles.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
@@ -90,8 +90,18 @@
     </section>
   </main>
 
+  <footer class="site-footer" style="margin-top:6rem;padding:2.5rem 1rem;border-top:1px solid rgba(255,255,255,.12);display:flex;flex-wrap:wrap;gap:1rem;align-items:center;justify-content:center;font-size:0.95rem;">
+    <nav class="footer-links" style="display:flex;flex-wrap:wrap;gap:1.25rem;text-transform:uppercase;letter-spacing:.02em;">
+      <a href="/" style="opacity:.9;text-decoration:none">Home</a>
+      <a href="/support.html" style="opacity:.9;text-decoration:none">Support</a>
+      <a href="/terms-of-use.html" style="opacity:.9;text-decoration:none">Terms of Use</a>
+      <a href="/privacy-policy.html" style="opacity:.9;text-decoration:none">Privacy Policy</a>
+      <a href="/acceptable-use-policy.html" style="opacity:.9;text-decoration:none">Acceptable Use Policy</a>
+      <a href="/copyright.html" style="opacity:.9;text-decoration:none">Copyright</a>
+    </nav>
+    <div style="flex-basis:100%;text-align:center;opacity:.7;margin-top:.75rem;">© 2024 quali.chat. All rights reserved.</div>
+  </footer>
+
   <script src="./app.js" defer></script>
-  <div id="site-footer"></div>
-  <script src="/js/footer.js" defer></script>
 </body>
 </html>
