Add shared footer assets and include globally

--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -6,10 +6,6 @@
     <p><a href="https://quali.chat/terms-of-use/">https://quali.chat/terms-of-use/</a></p>
   </div>
 </main>
-<footer class="site-footer" style="margin-top:3rem;padding:2.5rem 1rem;border-top:1px solid rgba(255,255,255,.12);text-align:center">
-  <nav class="footer-links">
-    <a href="/">Home</a><a href="/support.html">Support</a><a href="/terms-of-use.html">Terms of Use</a><a href="/privacy-policy.html">Privacy Policy</a><a href="/acceptable-use-policy.html">Acceptable Use Policy</a><a href="/copyright.html">Copyright</a>
-  </nav>
-  <div style="opacity:.7;margin-top:.5rem">© 2024 quali.chat. All rights reserved.</div>
-</footer>
+<link rel="stylesheet" href="/assets/css/footer.css">
+<script src="/assets/js/footer.js" defer></script>
 </body></html>
