--- a/privacy.html
+++ b/privacy.html
@@ -23,8 +23,15 @@
     <p>Provide your Privacy Policy here.</p>
   </main>
 
+  <footer class="site-footer">
+    <nav>
+      <a href="./about.html">About</a>
+      <a href="./demo.html">Demo</a>
+      <a href="./terms.html">Terms</a>
+      <a href="./privacy.html">Privacy</a>
+    </nav>
+    <small>© <span id="year"></span> quali.chat</small>
+  </footer>
   <script src="./app.js" defer></script>
-  <link rel="stylesheet" href="/assets/css/footer.css">
-  <script src="/assets/js/footer.js" defer></script>
 </body>
 </html>
