Add global footer injector

--- a/index.html
+++ b/index.html
@@ -103,5 +103,8 @@
   </footer>
 
   <script src="./app.js" defer></script>
+
+  <link rel="stylesheet" href="/assets/css/footer.css">
+  <script src="/assets/js/site-footer.js" defer></script>
 </body>
 </html>
