Add footer sync script and include on pages

--- a/index.html
+++ b/index.html
@@ -103,5 +103,6 @@
   </footer>
 
   <script src="./app.js" defer></script>
+  <script src="/assets/js/footer-sync.js" defer></script>
 </body>
 </html>
