--- a/support.html
+++ b/support.html
@@ -29,5 +29,6 @@
     </nav>
     <div style="opacity:.7;margin-top:.5rem">© 2024 quali.chat. All rights reserved.</div>
   </footer>
+  <script src="/assets/js/footer-sync.js" defer></script>
 </body>
 </html>
