--- a/copyright.html
+++ b/copyright.html
@@ -12,4 +12,5 @@
   </nav>
   <div style="opacity:.7;margin-top:.5rem">© 2024 quali.chat. All rights reserved.</div>
 </footer>
+  <script src="/assets/js/footer-sync.js" defer></script>
 </body></html>
