--- a/terms.html
+++ b/terms.html
@@ -33,5 +33,6 @@
     <small>© <span id="year"></span> quali.chat</small>
   </footer>
   <script src="./app.js" defer></script>
+  <script src="/assets/js/footer-sync.js" defer></script>
 </body>
 </html>
