Unify site footer across pages

--- a/support.html
+++ b/support.html
@@ -14,6 +14,7 @@
     footer{margin-top:auto}
     .footer-links a{text-transform:uppercase;letter-spacing:.02em;margin:0 .6rem}
   </style>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
   <main class="wrap">
@@ -23,12 +24,16 @@
       <p><a href="mailto:support@quali.chat">support@quali.chat</a></p>
     </div>
   </main>
-  <footer class="site-footer" style="margin-top:3rem;padding:2.5rem 1rem;border-top:1px solid rgba(255,255,255,.12);text-align:center">
-    <nav class="footer-links">
-      <a href="/">Home</a><a href="/support.html">Support</a><a href="/terms-of-use.html">Terms of Use</a><a href="/privacy-policy.html">Privacy Policy</a><a href="/acceptable-use-policy.html">Acceptable Use Policy</a><a href="/copyright.html">Copyright</a>
+  <footer class="site-footer" style="margin-top:6rem;padding:2.5rem 1rem;border-top:1px solid rgba(255,255,255,.12);display:flex;flex-wrap:wrap;gap:1rem;align-items:center;justify-content:center;font-size:0.95rem;">
+    <nav class="footer-links" style="display:flex;flex-wrap:wrap;gap:1.25rem;text-transform:uppercase;letter-spacing:.02em;">
+      <a href="/" style="opacity:.9;text-decoration:none">Home</a>
+      <a href="/support.html" style="opacity:.9;text-decoration:none">Support</a>
+      <a href="/terms-of-use.html" style="opacity:.9;text-decoration:none">Terms of Use</a>
+      <a href="/privacy-policy.html" style="opacity:.9;text-decoration:none">Privacy Policy</a>
+      <a href="/acceptable-use-policy.html" style="opacity:.9;text-decoration:none">Acceptable Use Policy</a>
+      <a href="/copyright.html" style="opacity:.9;text-decoration:none">Copyright</a>
     </nav>
-    <div style="opacity:.7;margin-top:.5rem">© 2024 quali.chat. All rights reserved.</div>
+    <div style="flex-basis:100%;text-align:center;opacity:.7;margin-top:.75rem;">© 2024 quali.chat. All rights reserved.</div>
   </footer>
-  <script src="/assets/js/footer-sync.js" defer></script>
 </body>
 </html>
