--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,4 +1,5 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Privacy Policy – Quali.chat</title><link rel="stylesheet" href="/styles.css"/><style>body{min-height:100svh;display:flex;flex-direction:column}.wrap{max-width:880px;margin:0 auto;padding:2rem}.card{backdrop-filter:saturate(140%) blur(8px);background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.12);border-radius:16px;padding:1.25rem}h1{font-size:2rem;margin:1rem 0 1.25rem}footer{margin-top:auto}</style></head><body>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Privacy Policy – Quali.chat</title><link rel="stylesheet" href="/styles.css"/><style>body{min-height:100svh;display:flex;flex-direction:column}.wrap{max-width:880px;margin:0 auto;padding:2rem}.card{backdrop-filter:saturate(140%) blur(8px);background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.12);border-radius:16px;padding:1.25rem}h1{font-size:2rem;margin:1rem 0 1.25rem}footer{margin-top:auto}</style>  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+</head><body>
 <main class="wrap">
   <h1>Privacy Policy</h1>
   <div class="card">
@@ -6,11 +7,15 @@
     <p><a href="https://quali.chat/privacy-policy/">https://quali.chat/privacy-policy/</a></p>
   </div>
 </main>
-<footer class="site-footer" style="margin-top:3rem;padding:2.5rem 1rem;border-top:1px solid rgba(255,255,255,.12);text-align:center">
-  <nav class="footer-links">
-    <a href="/">Home</a><a href="/support.html">Support</a><a href="/terms-of-use.html">Terms of Use</a><a href="/privacy-policy.html">Privacy Policy</a><a href="/acceptable-use-policy.html">Acceptable Use Policy</a><a href="/copyright.html">Copyright</a>
-  </nav>
-  <div style="opacity:.7;margin-top:.5rem">© 2024 quali.chat. All rights reserved.</div>
-</footer>
-  <script src="/assets/js/footer-sync.js" defer></script>
+<footer class="site-footer" style="margin-top:6rem;padding:2.5rem 1rem;border-top:1px solid rgba(255,255,255,.12);display:flex;flex-wrap:wrap;gap:1rem;align-items:center;justify-content:center;font-size:0.95rem;">
+    <nav class="footer-links" style="display:flex;flex-wrap:wrap;gap:1.25rem;text-transform:uppercase;letter-spacing:.02em;">
+      <a href="/" style="opacity:.9;text-decoration:none">Home</a>
+      <a href="/support.html" style="opacity:.9;text-decoration:none">Support</a>
+      <a href="/terms-of-use.html" style="opacity:.9;text-decoration:none">Terms of Use</a>
+      <a href="/privacy-policy.html" style="opacity:.9;text-decoration:none">Privacy Policy</a>
+      <a href="/acceptable-use-policy.html" style="opacity:.9;text-decoration:none">Acceptable Use Policy</a>
+      <a href="/copyright.html" style="opacity:.9;text-decoration:none">Copyright</a>
+    </nav>
+    <div style="flex-basis:100%;text-align:center;opacity:.7;margin-top:.75rem;">© 2024 quali.chat. All rights reserved.</div>
+  </footer>
 </body></html>
