Revamp site navigation with connect button

--- a/acceptable-use-policy.html
+++ b/acceptable-use-policy.html
@@ -1,5 +1,15 @@
 <!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Acceptable Use Policy – Quali.chat</title><link rel="stylesheet" href="/styles.css"/><style>body{min-height:100svh;display:flex;flex-direction:column}.wrap{max-width:880px;margin:0 auto;padding:2rem}.card{backdrop-filter:saturate(140%) blur(8px);background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.12);border-radius:16px;padding:1.25rem}h1{font-size:2rem;margin:1rem 0 1.25rem}footer{margin-top:auto}</style>  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="/assets/css/nav.css">
 </head><body>
+<header class="site-header glass">
+  <a class="brand" href="./">quali.chat</a>
+  <nav class="site-nav nav-list">
+    <a href="#about">About</a>
+    <a href="#demo">Demo</a>
+    <a class="nav-connect" href="/login">Connect</a>
+  </nav>
+</header>
+
 <main class="wrap">
   <h1>Acceptable Use Policy</h1>
   <div class="card">
