--- a/support.html
+++ b/support.html
@@ -15,8 +15,18 @@
     .footer-links a{text-transform:uppercase;letter-spacing:.02em;margin:0 .6rem}
   </style>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="/assets/css/nav.css">
 </head>
 <body>
+  <header class="site-header glass">
+    <a class="brand" href="./">quali.chat</a>
+    <nav class="site-nav nav-list">
+      <a href="#about">About</a>
+      <a href="#demo">Demo</a>
+      <a class="nav-connect" href="/login">Connect</a>
+    </nav>
+  </header>
+
   <main class="wrap">
     <h1>Support</h1>
     <div class="card">
