--- a/about.html
+++ b/about.html
@@ -6,16 +6,15 @@
   <title>About – quali.chat</title>
   <link rel="stylesheet" href="./styles.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="/assets/css/nav.css">
 </head>
 <body>
   <header class="site-header glass">
     <a class="brand" href="./">quali.chat</a>
-    <nav class="site-nav">
-      <a href="./index.html">Home</a>
-      <a class="active" href="./about.html">About</a>
-      <a href="./demo.html">Demo</a>
-      <a href="./terms.html">Terms</a>
-      <a href="./privacy.html">Privacy</a>
+    <nav class="site-nav nav-list">
+      <a href="#about">About</a>
+      <a href="#demo">Demo</a>
+      <a class="nav-connect" href="/login">Connect</a>
     </nav>
   </header>
 
