Update header navigation links to point to pages

--- a/support.html
+++ b/support.html
@@ -21,8 +21,8 @@
   <header class="site-header glass">
     <a class="brand" href="./">quali.chat</a>
     <nav class="site-nav nav-list">
-      <a href="#about">About</a>
-      <a href="#demo">Demo</a>
+      <a href="/about.html">About</a>
+      <a href="/demo.html">Demo</a>
       <a class="nav-connect" href="/login">Connect</a>
     </nav>
   </header>
